--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:[YOUR EMAIL]" class="email-link"> [YOUR EMAIL] </a>
+      <a href="mailto:veravilasboas@outlook.pt" class="email-link"> my email </a>
     </div>
   </body>
 </html>
