--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta title="yoga for everyone, teaching you"> 
+    <meta title="yoga for everyone, teaching you" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,13 +16,13 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>About Vera vilas boas yoga teacher</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> vera vilas boas</a>
+        <a class="navbar-brand" href="/index.html"> vera vilas boas</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,13 +37,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -62,7 +64,10 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="https://s9l8dd.csb.app/images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://s9l8dd.csb.app/images/yoga.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
           <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
@@ -70,13 +75,13 @@
         <div class="col-sm-4">
           <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
         </div>
-            <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:veravilasboas@outlook.pt" class="email-link"> 
-my email </a>
-    </div>
+        <div id="contact" class="mt-5">
+          <h2 class="text-center">📮 Contact me</h2>
+          <a href="mailto:veravilasboas@outlook.pt" class="email-link">
+            my email
+          </a>
+        </div>
       </div>
     </div>
-
   </body>
 </html>
