--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta title="yoga for everyone, teaching you" />
     <title>Vera vilas boas yoga and front end teacher</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> Vera vilas Boas</a>
+        <a class="navbar-brand" href="/index.html"> Vera vilas Boas</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="/index.html"
                 >Home</a
               >
             </li>
@@ -54,8 +55,8 @@
     <h1 class="text-center">Vera vilas boas</h1>
     <h3 class="text-center">Front-end developer, based in Portugal</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="/about.html#contact" class="primary-link">Contact me</a>
+      <a href="/about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
@@ -89,12 +90,20 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            title="weather application"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            title="youg application"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
