--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="/images/yoga.png" class="img-fluid rounded" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -72,7 +72,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="/" class="primary-link">Launch Yoga App</a>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="col-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             title="weather application"
             class="img-fluid rounded"
           />
@@ -100,7 +100,7 @@
       <div class="row mt-5">
         <div class="col-6">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             title="youg application"
             class="img-fluid rounded"
           />
@@ -114,7 +114,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="/" class="primary-link">Launch Weather App</a>
           </div>
         </div>
       </div>
