--- a/about.html
+++ b/about.html
@@ -70,10 +70,10 @@
           />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/images/weather.png" class="img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/images/yogurt.png" class="img-fluid p-2 shadow rounded" />
         </div>
         <div id="contact" class="mt-5">
           <h2 class="text-center">📮 Contact me</h2>
