--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="https://s9l8dd.csb.app/images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
