--- a/about.html
+++ b/about.html
@@ -80,7 +80,9 @@
           <a href="mailto:veravilasboas@outlook.pt" class="email-link">
             my email
           </a>
+        
         </div>
+        <footer> code by vera vilas boas</footer>
       </div>
     </div>
   </body>
