--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/index.html"> Vera vilas Boas</a>
+        <a class="navbar-brand" href="/index.html" title="vera homepage"> Vera vilas Boas</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,10 +42,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="about me">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="contact me">Contact me</a>
             </li>
           </ul>
         </div>
