--- a/index.html
+++ b/index.html
@@ -115,8 +115,16 @@
           </p>
           <div class="mt-5">
             <a href="/" class="primary-link">Launch Weather App</a>
-          </div>
+                 <br>
         </div>
+         <br>
+        </div>
+    <br>
+    <br>
+    <hr>
+
+     <footer> code by vera vilas boas</footer>
+        <br>
       </div>
     </div>
   </body>
