--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
     <title>About Vera vilas boas yoga teacher</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/index.html"> vera vilas boas</a>
+        <a class="navbar-brand" href="/" title="Homepage">Vera vilas boas</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,15 +37,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                tilte="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About Matt Delac"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Matt Delac"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -70,14 +81,14 @@
           />
         </div>
         <div class="col-sm-4">
-          <img src="/images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/images/weather.png" alt="yoga"  class="img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="/images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/images/yogurt.png" alt="yoga"  class="img-fluid p-2 shadow rounded" />
         </div>
         <div id="contact" class="mt-5">
           <h2 class="text-center">📮 Contact me</h2>
-          <a href="mailto:veravilasboas@outlook.pt" class="email-link">
+          <a href="mailto:veravilasboas@outlook.pt" class="email-link" title="contact vera vilas boas">
             my email
           </a>
         
