--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" title="vera homepage"> Vera vilas Boas</a>
+        <a class="navbar-brand" href="/" title="Homepage">Vera VILAS BOAS </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,15 +37,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                tilte="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="about me">About me</a>
+              <a class="nav-link" href="/about.html" title="About Matt Delac"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact" title="contact me">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Matt Delac"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -61,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="/images/yoga.png" class="img-fluid rounded" />
+          <img src="/images/yoga.png" class="img-fluid rounded" alt="yoga" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -91,7 +102,7 @@
         </div>
         <div class="col-6">
           <img
-            src="/images/weather.png"
+            src="/images/weather.png" alt="yogaproject"
             title="weather application"
             class="img-fluid rounded"
           />
@@ -100,7 +111,8 @@
       <div class="row mt-5">
         <div class="col-6">
           <img
-            src="/images/yogurt.png"
+            src="/images/yogurt.png" 
+            alt="youg"
             title="youg application"
             class="img-fluid rounded"
           />
