--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h3 class="text-center">Front-end developer, based in Portugal</h3>
     <div class="navigation-links mb-5">
       <a href="/about.html#contact" class="primary-link">Contact me</a>
-      <a href="/about.html" class="secondary-link">About me</a>
+      <a href="/about.html" class="secondary-link  ">About me</a>
     </div>
     <div class="container">
       <div class="row">
@@ -83,12 +83,36 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="/" class="primary-link">Launch Yoga App</a>
+            <a href="/" class="primary-link project-link" >Launch Yoga App</a>
+          </div>
+        </div>
+      </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/images/yoga.png"
+            alt="Yoga project "
+            class="img-fluid rounded d-none d-sm-block"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="mb-3">Yoga app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link project-link" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -97,27 +121,31 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
-            src="/images/weather.png" alt="yogaproject"
-            title="weather application"
-            class="img-fluid rounded"
+            src="/images/weather.png"
+            class="img-fluid rounded d-none d-sm-block"
+            alt="Weather project"
           />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
-            src="/images/yogurt.png" 
-            alt="youg"
-            title="youg application"
-            class="img-fluid rounded"
+            src="/images/yogurt.png"
+            class="img-fluid rounded d-none d-sm-block"
+            alt="Yogurt project"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -126,8 +154,12 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="/" class="primary-link">Launch Weather App</a>
-                 <br>
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project"
+              >Launch Yogurt App</a
+            >
         </div>
          <br>
         </div>
