--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="/images/yoga.png" class="img-fluid rounded " alt="yoga" />
+          <img src="/images/yoga.png" class="img-fluid rounded d-none d--block" alt="yoga" />
         </div>
-
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
